k8s/event-bus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus
  namespace: default
  labels:
    app: event-bus
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: http
